--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <h1>Com o Combo+, você pode aproveitar a Alura+ 
+    <h1>Com o Combo+, você pode aproveitar a Alura+
         e o Altura Língua por um preço unico.</h1>
+    <img src="Combo.png" alt="imagem Combo">
+
 </body>
 
 </html>
