--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 </head>
 
 <body>
-    <h1>Com o Combo+, você pode aproveitar a Alura+
-        e o Altura Língua por um preço unico.</h1>
-    <img src="Combo.png" alt="imagem Combo">
+    <section class="principal">
+        <h1>Com o Combo+, você pode aproveitar a Alura+
+            e o Altura Língua por um preço unico.</h1>
+        <img src="Combo.png" alt="imagem Combo">
+
+    </section>
+
+
+
+
+
+
+
 
 </body>
 
