--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <section class="principal">
+    <section class="container principal">
         <h1>Com o Combo+, você pode aproveitar a Alura+
             e o Altura Língua por um preço unico.</h1>
+            
         <img src="Combo.png" alt="imagem Combo">
 
     </section>
