--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             e o Altura Língua por um preço unico.</h1>
             
         <img src="Combo.png" alt="imagem Combo">
-
+ 
+    <a href="https://github.dev/boiadeira/curso2_2B_2024/blob/main/index.html">Assine por 12x de R$ 120,00</a>
+ 
     </section>
 
 
