--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
 <body>
     <section class="container principal">
+        <div>
         <h1>Com o Combo+, você pode aproveitar a Alura+
             e o Altura Língua por um preço unico.</h1>
             
         <img src="Combo.png" alt="imagem Combo">
  
-    <a href="https://github.dev/boiadeira/curso2_2B_2024/blob/main/index.html" class="container__botao">Assine por 12x de R$ 120,00</a>
- 
+        <a href="https://github.dev/boiadeira/curso2_2B_2024/blob/main/index.html" class="container__botao">Assine por 12x de R$ 120,00</a>
+        </div>
     </section>
 
 
