--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <img src="Combo.png" alt="imagem Combo">
  
         <a href="https://github.dev/boiadeira/curso2_2B_2024/blob/main/index.html" class="container__botao">Assine por 12x de R$ 120,00</a>
+        <a href="https://github.dev/boiadeira/curso2_2B_2024/blob/main/index.html" class="container__botao botao_secundario"> Assinar somente o Alura+</a>
         </div>
+
     </section>
 
 
