--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
  
         <a href="https://github.dev/boiadeira/curso2_2B_2024/blob/main/index.html" class="container__botao">Assine por 12x de R$ 120,00</a>
         <a href="https://github.dev/boiadeira/curso2_2B_2024/blob/main/index.html" class="container__botao botao_secundario"> Assinar somente o Alura+</a>
+        <p class="container__aviso"> 
+            O preço pode varias caso a assinatura seja feita em outros planos.
+
+        </p>
         </div>
 
     </section>
