--- a/index.html
+++ b/index.html
@@ -5,44 +5,57 @@
     <title>Alura Plus</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!--faz o link do arquivo CSS com o HTML -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <!--Cria uma sessão contendo duas classes: principal e container-->
     <section class="principal container">
+        <!--Criar uma divisão de conteúdo contendo a classe:"container__caixa"-->
         <div class="container__caixa">
+            <!--Cria um título contendo a classe "container__título"-->
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
                 único.</h1>
+                <!--Insere uma imagem-->
             <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
+            <!--Insere um link-->
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+            <!--Insere um link-->
             <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+            <!--insere um parágrafo contendo a classe "container__aviso"-->
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
-
+    <!--Criar uma sessão contendo duas classes: dispositivos-->
     <section class="container secundario">
+        <!--Insere uma imagem-->
         <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <!--Cria uma divisão de conteúdo contendo a classe: container__descricao-->
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
+
             <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
                 aparelhos. Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
-
+   <!--Cria uma sessão contendo duas classes: "container__secundario"  -->
     <section class="container secundario">
         <div class="container__descricao">
+            <!--Insere um parágrafo contendo a classe "discricao__texto"-->
             <p class="descricao__texto">
                 Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
                 tecnologia e aprender inglês ou espanhol, onde e como quiser.
             </p>
+             <!--Insere um link-->
             <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
         </div>
+        <!--Insere uma imagem-->
         <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
-
+ <!--Cria uma sessão contendo duas classes: -->
     <section class="container secundario">
         <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
             class="secundario__imagem">
@@ -55,7 +68,9 @@
     
     <section class="dispositivos">
         <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <!--Cria uma lista não ordenada contendo uma classe chamada "dispositivos__lista"-->
         <ul class="dispositivos__lista">
+        <!--Cria um item entro da lista não ordenada-->
             <li>
                 <img src="img/tv.png" alt="Ícone de televisão">
                 <h3 class="lista__item">TV</h3>
@@ -73,6 +88,7 @@
 
     <footer class="rodape">
         <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+          <!--Cria uma lista não ordenada contendo uma classe chamada "rodape__lista"-->
         <ul class="rodape__lista">
             <li class="lista__link">
                 <a href="#">Idioma</a>
