--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <!--Cria uma sessão contendo duas classes: "container__secundario"  -->
     <section class="container secundario">
         <div class="container__descricao">
-            <!--Insere um parágrafo contendo a classe "discricao__texto"-->
+            <!--insere um parágrafo contendo a classe: descricao__texto-->
             <p class="descricao__texto">
                 Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
                 tecnologia e aprender inglês ou espanhol, onde e como quiser.
@@ -57,15 +57,17 @@
     </section>
  <!--Cria uma sessão contendo duas classes: -->
     <section class="container secundario">
+        <!--insere uma imagem-->
         <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
             class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Baixe seus cursos</h2>
+                         <!--insere um parágrafo contendo a classe: descricao__texto-->
             <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
                 você, até mesmo sem internet.</p>
         </div>
     </section>
-    
+    <!--Cria uma sessão contendo duas classes: " container__dispositivo"  -->
     <section class="dispositivos">
         <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
         <!--Cria uma lista não ordenada contendo uma classe chamada "dispositivos__lista"-->
@@ -76,11 +78,16 @@
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
+                <!-- Acrecenta uma imagem-->
                 <img src="img/computador.png" alt="Ícone de computador">
+                <!--acrecenta um subtítulo-->
                 <h3 class="lista__item">Computador</h3>
+                <!--Cria um item entro da lista não ordenada-->
             </li>
             <li>
+                <!--acrecenta uma imagem-->
                 <img src="img/celular.png" alt="Ícone de celular">
+                <!--acrecenta um subtítulo-->
                 <h3 class="lista__item">Celular</h3>
             </li>
         </ul>
@@ -90,25 +97,33 @@
         <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
           <!--Cria uma lista não ordenada contendo uma classe chamada "rodape__lista"-->
         <ul class="rodape__lista">
+            <!--Cria um item entro da lista não ordenada-->
             <li class="lista__link">
+                <!--Insere um link-->
                 <a href="#">Idioma</a>
             </li>
             <li class="lista__link">
+               <!--Insere um link-->
                 <a href="#">Dispositivos compatíveis</a>
             </li>
             <li class="lista__link">
+                            <!--Insere um link-->
                 <a href="#">Contrato de assinatura</a>
             </li>
             <li class="lista__link">
+                            <!--Insere um link-->
                 <a href="#">Politica de privacidade</a>
             </li>
             <li class="lista__link">
+                            <!--Insere um link-->
                 <a href="#">Proteção de dados no Brasil</a>
             </li>
             <li class="lista__link">
+                            <!--Insere um link-->
                 <a href="#">Anuncios personalizados</a>
             </li>
             <li class="lista__link">
+                            <!--Insere um link-->
                 <a href="#">Ajuda</a>
             </li>
         </ul>
