--- a/index.html
+++ b/index.html
@@ -92,43 +92,47 @@
             </li>
         </ul>
     </section>
-
+   <!--Acrescentar um rodapé com a classe "rodapé"-->
     <footer class="rodape">
+        <!--acrescentar uma imagem -->
         <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
-          <!--Cria uma lista não ordenada contendo uma classe chamada "rodape__lista"-->
+          <!-- cria uma lista não ordenada-->
         <ul class="rodape__lista">
             <!--Cria um item entro da lista não ordenada-->
             <li class="lista__link">
-                <!--Insere um link-->
+                <!--acrescentar um link-->
                 <a href="#">Idioma</a>
+                <!--cada "li" e em item dentro da lista-->
             </li>
             <li class="lista__link">
-               <!--Insere um link-->
+               <!--acrescentar um link-->
                 <a href="#">Dispositivos compatíveis</a>
             </li>
             <li class="lista__link">
-                            <!--Insere um link-->
+                            <!--acrescentar um link-->
                 <a href="#">Contrato de assinatura</a>
             </li>
             <li class="lista__link">
-                            <!--Insere um link-->
+                            <!-- acrescentar um link-->
                 <a href="#">Politica de privacidade</a>
             </li>
             <li class="lista__link">
-                            <!--Insere um link-->
+                            <!--acrescentar um link-->
                 <a href="#">Proteção de dados no Brasil</a>
             </li>
             <li class="lista__link">
-                            <!--Insere um link-->
+                            <!--acrescentar um link-->
                 <a href="#">Anuncios personalizados</a>
             </li>
             <li class="lista__link">
-                            <!--Insere um link-->
+                            <!--acrescentar um link-->
                 <a href="#">Ajuda</a>
             </li>
         </ul>
+        <!-- acrescenta um parágrafo com a classe "rodape__texto-->
         <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de
             assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+            <!-- acrescenta um parágrafo com a classe "rodape__texto"-->
         <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O
             serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São
             Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
