--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!--Criar uma sessão contendo duas classes: dispositivos-->
     <section class="container secundario">
         <!--Insere uma imagem-->
-        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <img src="Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
         <!--Cria uma divisão de conteúdo contendo a classe: container__descricao-->
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
@@ -53,12 +53,12 @@
             <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
         </div>
         <!--Insere uma imagem-->
-        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+        <img src="Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
  <!--Cria uma sessão contendo duas classes: -->
     <section class="container secundario">
         <!--insere uma imagem-->
-        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+        <img src="Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
             class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Baixe seus cursos</h2>
@@ -74,19 +74,19 @@
         <ul class="dispositivos__lista">
         <!--Cria um item entro da lista não ordenada-->
             <li>
-                <img src="img/tv.png" alt="Ícone de televisão">
+                <img src="tv.png" alt="Ícone de televisão">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
                 <!-- Acrecenta uma imagem-->
-                <img src="img/computador.png" alt="Ícone de computador">
+                <img src="computador.png" alt="Ícone de computador">
                 <!--acrecenta um subtítulo-->
                 <h3 class="lista__item">Computador</h3>
                 <!--Cria um item entro da lista não ordenada-->
             </li>
             <li>
                 <!--acrecenta uma imagem-->
-                <img src="img/celular.png" alt="Ícone de celular">
+                <img src="celular.png" alt="Ícone de celular">
                 <!--acrecenta um subtítulo-->
                 <h3 class="lista__item">Celular</h3>
             </li>
@@ -95,7 +95,7 @@
    <!--Acrescentar um rodapé com a classe "rodapé"-->
     <footer class="rodape">
         <!--acrescentar uma imagem -->
-        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+        <img src="Logo.png" alt="Alura+" class="rodape__logo">
           <!-- cria uma lista não ordenada-->
         <ul class="rodape__lista">
             <!--Cria um item entro da lista não ordenada-->
