--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
                 único.</h1>
                 <!--Insere uma imagem-->
-            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
+            <img src="Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
             <!--Insere um link-->
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <!--Insere um link-->
